// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IrregularPieChart renders a irregular pie chart 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,200)"
              class="ez-irregular-arcs"
            >
              <path
                d="M-73.47315653655917,101.1271242968684L0,0Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M1.1481063742006436e-14,-187.5L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;

exports[`IrregularPieChart renders a irregular pie chart 2`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,200)"
              class="ez-irregular-arcs"
            >
              <path
                d="M-73.47315653655917,101.1271242968684A125,125,0,0,1,-2.2962127484012872e-14,-125L0,0Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M1.1481063742006436e-14,-187.5A187.5,187.5,0,1,1,-110.20973480483876,151.69068644530262L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;
